--- a/pom.xml
+++ b/pom.xml
@@ -50,14 +50,16 @@
             <artifactId>allure-testng</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-devtools-v116</artifactId>
+            <version>4.12.0</version>
+        </dependency>
     </dependencies>
 
     <build>
